add slashbox style

--- a/base/confs.tex
+++ b/base/confs.tex
@@ -23,7 +23,7 @@
 \usepackage{booktabs}               % 表の罫線の太さとかを変える
 \usepackage{layout}                 % \layoutでレイアウト確認
 \usepackage{verbatim}               % verbatim環境
-%\usepackage{slashbox}               % tableセルでの斜線
+\usepackage{slashbox}               % tableセルでの斜線
 \usepackage{tikz}                   % for tikz library
 % ******** macros ********
 % refs
