--- a/base/confs.tex
+++ b/base/confs.tex
@@ -1,106 +1,6 @@
 % ******** packages ********
-\usepackage{amsmath}                % 数式用
-\usepackage{amssymb}                % 数式用
-\usepackage{amsfonts}               % 数式用
-\usepackage{cases}                  % 数式用
-\usepackage{latexsym}               % 記号
-%\usepackage{txfonts}                % 記号
-\usepackage{type1cm}                % フォントサイズの変更とか
-\usepackage{fancybox}               % 文字の囲み
-\usepackage{ascmac}                 % 拡張環境
-\usepackage{url}                    % urlマクロ
-\usepackage{float}                  % 図の配置位置を操作
-\usepackage{floatflt}               % 図の配置位置を操作
-\usepackage{nidanfloat}             % 二段組環境で図を配置
-\usepackage[dvipdfmx]{graphicx}     % 図の挿入
-\usepackage[dvipdfmx]{color}        % 文字に色をつける
-\usepackage{listings}               % lstlisting
-\usepackage{jlisting}               % lstlisting + Japanese
-\usepackage{itembkbx}               % breakitembox
-\usepackage{ulem}                   % 下線、打ち消し線
-\usepackage{array}                  % tabular環境拡張
-\usepackage{wrapfig}                % 図に文章を周り込ませる
-\usepackage{booktabs}               % 表の罫線の太さとかを変える
-\usepackage{layout}                 % \layoutでレイアウト確認
-\usepackage{verbatim}               % verbatim環境
-\usepackage{slashbox}               % tableセルでの斜線
-\usepackage{tikz}                   % for tikz library
+
 % ******** macros ********
-% refs
-\newcommand{\funcref}[1]{式(\ref{func:#1})}
-\newcommand{\tblref}[1]{表\ref{table:#1}}
-\newcommand{\figref}[1]{図\ref{figure:#1}}
-\newcommand{\lstref}[1]{リスト\ref{lst:#1}}
-
-% math symbol
-\newcommand{\difd}{\mathrm{d}}
-% 案:積分環境
-%\newcommand{\intdd}[4]{\int_{#1}^{#2}#3\difd #4}
-%\newcommand{\max}{\mathrm{max}}
-
-% caption
-\makeatletter
-\newcommand{\figcaption}[1]{\def\@captype{figure}\caption{#1}}
-\newcommand{\tblcaption}[1]{\def\@captype{table}\caption{#1}}
-\makeatother
-
-% caption the number
-%\renewcommand{\thesection}{$\circ$}
-\renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}}
-\renewcommand{\theequation}{\arabic{section}.\arabic{equation}}
-\renewcommand{\thefigure}{\arabic{section}.\arabic{figure}}
-\renewcommand{\thetable}{\arabic{section}.\arabic{table}}
-\renewcommand{\thefootnote}{\arabic{footnote}}
-\AtBeginDocument{
-    \renewcommand{\lstlistingname}{リスト}
-    \renewcommand{\thelstlisting}{\arabic{section}.\arabic{lstlisting}}
-}
-\makeatletter
-\@addtoreset{equation}{section}
-\@addtoreset{figure}{section}
-\@addtoreset{table}{section}
-\@addtoreset{lstlisting}{section}
-\makeatother
-
-% cite seen
-\makeatletter
-\DeclareRobustCommand\cite{\unskip
-    \@ifnextchar[{\@tempswatrue\@citex}{\@tempswafalse\@citex[]}
-}
-\renewcommand{\@cite}[2]{$^{[\hbox{\scriptsize{#1\if@tempswa , #2\fi}]}}$}
-% \def\@biblabel#1{#1)}
-\makeatother
-
-% my columntype
-\newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
-
-% lstlisting setting
-\lstset{
-    frame=trlb,
-    breaklines=true,
-    showstringspaces=\false, % スペースを可視化するか
-    keepspaces=true,
-    xleftmargin=3zw,
-    xrightmargin=0zw,
-    framerule=.2pt,
-    columns=[l]{fullflexible},
-    numbers=left,
-    stepnumber=1,
-    numberstyle={\rmfamily},
-    numbersep=1em,
-    lineskip=-3pt,
-    morecomment={[s][{\color[cmyk]{1,0,0,0}}]{/**}{*/}},
-    stringstyle={\ttfamily \color[rgb]{0.87,0.07,0.27} }, % 二重引用符内
-    commentstyle={\color[rgb]{0.2,0.6,0}\ttfamily\scriptsize}, % コメント
-    keywordstyle={\ttfamily \color[rgb]{0,0.5,0.5} }, % 言語のキーワード
-    keywordstyle={[2]\color[rgb]{0.2,0.2,0.73}}, % 言語によってあったりなかったりとのこと 色は適当
-    keywordstyle={[3]\color[rgb]{0.69,0,0.25}} % 言語によってあったりなかったりとのこと 色は適当
-}
-
-% my define
-\def\lstinputcode#1#2#3#4{\lstinputlisting[basicstyle={\ttfamily\footnotesize},label={lst:#3},caption={#2},language={#4}]{#1}}
-% ******** settingend ********
-
-%% for pandoc
-
-\newcommand{\tightlist}{}
+\input{pkgs.tex}
+\input{macros.tex}
+\input{forpandoc.tex}
