--- a/base/style.tex
+++ b/base/style.tex
@@ -1,8 +1,3 @@
 \pagestyle{plain}
 
-\setlength{\textwidth}{\fullwidth}
-\setlength{\textheight}{40\baselineskip}
-\addtolength{\textheight}{\topskip}
-\setlength{\topmargin}{0pt}
-\setlength{\headheight}{0pt}
-\setlength{\headsep}{0pt}
+\geometry{top=2cm, bottom=2cm, left=2cm, right=1cm, includefoot}
