--- a/arts/index.tex
+++ b/arts/index.tex
@@ -3,8 +3,14 @@
 \date{\today}
 
 \begin{document}
+  \pagenumbering{Roman}
   \maketitle
   
+  %\pagenumbering{roman}
+  %\begin{abstract}
+  %\end{abstract}
+  
+  \pagenumbering{arabic}
   %\tableofcontents
   
   \include{sample}
